--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.2.0",
+    "@expo/metro-runtime": "~3.1.1",
+    "@ui-kitten/components": "^5.3.1",
+    "@ui-kitten/template-ts": "^5.3.1",
     "expo": "~50.0.4",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.2",
-    "react-native-web": "~0.19.6",
     "react-dom": "18.2.0",
-    "@expo/metro-runtime": "~3.1.1"
+    "react-native": "0.73.2",
+    "react-native-svg": "^14.1.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
