--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@eva-design/eva": "^2.2.0",
+        "@expo/metro-config": "^0.17.3",
         "@expo/metro-runtime": "~3.1.1",
         "@ui-kitten/components": "^5.3.1",
         "@ui-kitten/eva-icons": "^5.3.1",
