--- a/package.json
+++ b/package.json
@@ -1,30 +1,33 @@
 {
-    "name": "timetable",
-    "version": "1.0.0",
-    "main": "node_modules/expo/AppEntry.js",
-    "scripts": {
-        "start": "expo start",
-        "android": "expo start --android",
-        "ios": "expo start --ios",
-        "web": "expo start --web"
-    },
-    "dependencies": {
-        "@eva-design/eva": "^2.2.0",
-        "@expo/metro-runtime": "~3.1.1",
-        "@ui-kitten/components": "^5.3.1",
-        "@ui-kitten/eva-icons": "^5.3.1",
-        "expo": "~50.0.4",
-        "expo-status-bar": "~1.11.1",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "react-native": "0.73.2",
-        "react-native-svg": "^14.1.0",
-        "react-native-web": "~0.19.6"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.20.0",
-        "@types/react": "~18.2.45",
-        "typescript": "^5.1.3"
-    },
-    "private": true
+  "name": "timetable",
+  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
+  },
+  "dependencies": {
+    "@eva-design/eva": "^2.2.0",
+    "@expo/metro-runtime": "~3.1.1",
+    "@gorhom/bottom-sheet": "^4.6.0",
+    "@ui-kitten/components": "^5.3.1",
+    "@ui-kitten/eva-icons": "^5.3.1",
+    "expo": "~50.0.4",
+    "expo-status-bar": "~1.11.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.73.2",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-svg": "^14.1.0",
+    "react-native-web": "~0.19.6"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.45",
+    "typescript": "^5.1.3"
+  },
+  "private": true
 }
