--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
     "expo": "~50.0.4",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "^11.10.2",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
