--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~50.0.4",
     "expo-app-loading": "^2.1.1",
     "expo-font": "^11.10.2",
+    "expo-linear-gradient": "^12.7.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
