--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.2.0",
-    "@expo/metro-runtime": "~3.1.1",
+    "@expo/metro-runtime": "~3.1.3",
     "@gorhom/bottom-sheet": "^4.6.0",
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
-    "expo": "~50.0.4",
-    "expo-app-loading": "^2.1.1",
+    "expo": "~50.0.6",
     "expo-font": "^11.10.2",
     "expo-linear-gradient": "^12.7.1",
+    "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
