--- a/package.json
+++ b/package.json
@@ -10,27 +10,24 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.2.0",
-    "@expo/metro-runtime": "~3.1.3",
-    "@gorhom/bottom-sheet": "^4.6.0",
+    "@expo/metro-runtime": "~3.2.1",
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
-    "expo": "~50.0.6",
-    "expo-font": "^11.10.2",
-    "expo-linear-gradient": "^12.7.1",
-    "expo-splash-screen": "~0.26.4",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.0",
+    "expo-font": "~12.0.6",
+    "expo-splash-screen": "~0.27.4",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.2",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-svg": "^14.1.0",
-    "react-native-web": "~0.19.6"
+    "react-native": "0.74.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-svg": "15.2.0",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "@babel/core": "^7.24.0",
+    "@types/react": "~18.2.79",
+    "typescript": "~5.3.3"
   },
   "private": true
 }
