--- a/custom-mapping.json
+++ b/custom-mapping.json
@@ -80,6 +80,11 @@
         },
         "Button": {
             "appearances": {
+                "primary": {
+                    "mapping": {
+                        "textFontFamily": "Montserrat-Regular"
+                    }
+                },
                 "filled": {
                     "variantGroups": {
                         "size": {
