--- a/eas.json
+++ b/eas.json
@@ -1,18 +1,12 @@
 {
     "build": {
-        "preview": {
+        "production": {
             "android": {
-                "buildType": "apk"
+                "image": "latest"
+            },
+            "ios": {
+                "image": "latest"
             }
-        },
-        "preview2": {
-            "android": {
-                "gradleCommand": ":app:assembleRelease"
-            }
-        },
-        "preview3": {
-            "developmentClient": true
-        },
-        "production": {}
+        }
     }
 }
