--- a/eas.json
+++ b/eas.json
@@ -2,7 +2,7 @@
     "build": {
         "production": {
             "env": {
-                "EXPO_PUBLIC_API_URL": "https://api.production.com"
+                "EXPO_PUBLIC_API_URL": "http://localhost:8081/"
             },
             "android": {
                 "image": "latest"
@@ -13,7 +13,7 @@
         },
         "test": {
             "env": {
-                "EXPO_PUBLIC_API_URL": "https://api.test.com"
+                "EXPO_PUBLIC_API_URL": "http://localhost:8081/"
             }
         }
     }
