--- a/eas.json
+++ b/eas.json
@@ -2,7 +2,10 @@
     "build": {
         "preview": {
             "android": {
-                "buildType": "apk"
+                "image": "latest"
+            },
+            "ios": {
+                "image": "latest"
             }
         },
         "preview2": {
