--- a/eas.json
+++ b/eas.json
@@ -2,11 +2,20 @@
     "build": {
         "preview": {
             "android": {
-                "image": "latest"
-            },
-            "ios": {
-                "image": "latest"
+                "buildType": "apk"
             }
-        }
+        },
+        "preview2": {
+            "android": {
+                "gradleCommand": ":app:assembleRelease"
+            }
+        },
+        "preview3": {
+            "developmentClient": true
+        },
+        "preview4": {
+            "distribution": "internal"
+        },
+        "production": {}
     }
 }
