--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/metro-runtime": "~3.2.1",
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
+    "axios": "^1.7.2",
     "expo": "^51.0.0",
     "expo-font": "~12.0.6",
     "expo-splash-screen": "~0.27.4",
@@ -22,7 +23,8 @@
     "react-native": "0.74.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-svg": "15.2.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
