получение и рендер раписания на текущую дату

--- a/eas.json
+++ b/eas.json
@@ -3,6 +3,9 @@
         "preview": {
             "android": {
                 "buildType": "apk"
+            },
+            "env": {
+                "EXPO_PUBLIC_API_URL": "http://31.128.36.67:8080/"
             }
         },
         "preview2": {
