--- a/custom-mapping.json
+++ b/custom-mapping.json
@@ -47,6 +47,28 @@
                 }
             }
         },
+        "Card": {
+            "appearances": {
+                "outline": {
+                    "variantGroups": {
+                        "status": {
+                            "basic": {
+                                "accentHeight": 0
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "Tooltip": {
+            "appearances": {
+                "default": {
+                    "mapping": {
+                        "textFontWeight": "text-paragraph-1-font-weight"
+                    }
+                }
+            }
+        },
         "Button": {
             "appearances": {
                 "filled": {
@@ -54,6 +76,190 @@
                         "textFontFamily": "Montserrat-Light"
                     },
                     "variantGroups": {
+                        "status": {
+                            "basic": {
+                                "borderColor": "color-basic-default-border",
+                                "backgroundColor": "color-basic-default",
+                                "textColor": "color-basic-800",
+                                "iconTintColor": "color-basic-800",
+                                "state": {
+                                    "focused": {
+                                        "borderColor": "color-basic-focus-border",
+                                        "backgroundColor": "color-basic-focus"
+                                    },
+                                    "hover": {
+                                        "borderColor": "color-basic-hover-border",
+                                        "backgroundColor": "color-basic-hover"
+                                    },
+                                    "active": {
+                                        "borderColor": "color-basic-active-border",
+                                        "backgroundColor": "color-basic-active"
+                                    },
+                                    "disabled": {
+                                        "borderColor": "color-basic-disabled-border",
+                                        "backgroundColor": "color-basic-disabled",
+                                        "textColor": "text-disabled-color",
+                                        "iconTintColor": "text-disabled-color"
+                                    }
+                                }
+                            },
+                            "primary": {
+                                "borderColor": "color-primary-default-border",
+                                "backgroundColor": "color-primary-default",
+                                "textColor": "text-control-color",
+                                "iconTintColor": "text-control-color",
+                                "state": {
+                                    "focused": {
+                                        "borderColor": "color-primary-500",
+                                        "backgroundColor": "color-primary-500"
+                                    },
+                                    "hover": {
+                                        "borderColor": "color-primary-hover-border",
+                                        "backgroundColor": "color-primary-hover"
+                                    },
+                                    "active": {
+                                        "borderColor": "color-primary-600",
+                                        "backgroundColor": "color-primary-600"
+                                    },
+                                    "disabled": {
+                                        "borderColor": "color-primary-disabled-border",
+                                        "backgroundColor": "color-primary-400",
+                                        "textColor": "text-secondary-color",
+                                        "iconTintColor": "text-disabled-color"
+                                    }
+                                }
+                            },
+                            "success": {
+                                "borderColor": "color-success-default-border",
+                                "backgroundColor": "color-success-default",
+                                "textColor": "text-control-color",
+                                "iconTintColor": "text-control-color",
+                                "state": {
+                                    "focused": {
+                                        "borderColor": "color-success-focus-border",
+                                        "backgroundColor": "color-success-focus"
+                                    },
+                                    "hover": {
+                                        "borderColor": "color-success-hover-border",
+                                        "backgroundColor": "color-success-hover"
+                                    },
+                                    "active": {
+                                        "borderColor": "color-success-active-border",
+                                        "backgroundColor": "color-success-active"
+                                    },
+                                    "disabled": {
+                                        "borderColor": "color-success-disabled-border",
+                                        "backgroundColor": "color-success-disabled",
+                                        "textColor": "text-disabled-color",
+                                        "iconTintColor": "text-disabled-color"
+                                    }
+                                }
+                            },
+                            "info": {
+                                "borderColor": "color-info-default-border",
+                                "backgroundColor": "color-info-default",
+                                "textColor": "text-control-color",
+                                "iconTintColor": "text-control-color",
+                                "state": {
+                                    "focused": {
+                                        "borderColor": "color-info-focus-border",
+                                        "backgroundColor": "color-info-focus"
+                                    },
+                                    "hover": {
+                                        "borderColor": "color-info-hover-border",
+                                        "backgroundColor": "color-info-hover"
+                                    },
+                                    "active": {
+                                        "borderColor": "color-info-active-border",
+                                        "backgroundColor": "color-info-active"
+                                    },
+                                    "disabled": {
+                                        "borderColor": "color-info-disabled-border",
+                                        "backgroundColor": "color-info-disabled",
+                                        "textColor": "text-disabled-color",
+                                        "iconTintColor": "text-disabled-color"
+                                    }
+                                }
+                            },
+                            "warning": {
+                                "borderColor": "color-warning-default-border",
+                                "backgroundColor": "color-warning-default",
+                                "textColor": "text-control-color",
+                                "iconTintColor": "text-control-color",
+                                "state": {
+                                    "focused": {
+                                        "borderColor": "color-warning-focus-border",
+                                        "backgroundColor": "color-warning-focus"
+                                    },
+                                    "hover": {
+                                        "borderColor": "color-warning-hover-border",
+                                        "backgroundColor": "color-warning-hover"
+                                    },
+                                    "active": {
+                                        "borderColor": "color-warning-active-border",
+                                        "backgroundColor": "color-warning-active"
+                                    },
+                                    "disabled": {
+                                        "borderColor": "color-warning-disabled-border",
+                                        "backgroundColor": "color-warning-disabled",
+                                        "textColor": "text-disabled-color",
+                                        "iconTintColor": "text-disabled-color"
+                                    }
+                                }
+                            },
+                            "danger": {
+                                "borderColor": "color-danger-default-border",
+                                "backgroundColor": "color-danger-default",
+                                "textColor": "text-control-color",
+                                "iconTintColor": "text-control-color",
+                                "state": {
+                                    "focused": {
+                                        "borderColor": "color-danger-focus-border",
+                                        "backgroundColor": "color-danger-focus"
+                                    },
+                                    "hover": {
+                                        "borderColor": "color-danger-hover-border",
+                                        "backgroundColor": "color-danger-hover"
+                                    },
+                                    "active": {
+                                        "borderColor": "color-danger-active-border",
+                                        "backgroundColor": "color-danger-active"
+                                    },
+                                    "disabled": {
+                                        "borderColor": "color-danger-disabled-border",
+                                        "backgroundColor": "color-danger-disabled",
+                                        "textColor": "text-disabled-color",
+                                        "iconTintColor": "text-disabled-color"
+                                    }
+                                }
+                            },
+                            "control": {
+                                "borderColor": "color-control-default-border",
+                                "backgroundColor": "color-control-default",
+                                "textColor": "color-basic-800",
+                                "iconTintColor": "color-basic-800",
+                                "state": {
+                                    "focused": {
+                                        "borderColor": "color-control-focus-border",
+                                        "backgroundColor": "color-control-focus"
+                                    },
+                                    "hover": {
+                                        "borderColor": "color-control-hover-border",
+                                        "backgroundColor": "color-control-hover"
+                                    },
+                                    "active": {
+                                        "borderColor": "color-control-active-border",
+                                        "backgroundColor": "color-control-active"
+                                    },
+                                    "disabled": {
+                                        "borderColor": "color-control-disabled-border",
+                                        "backgroundColor": "color-control-disabled",
+                                        "textColor": "text-disabled-color",
+                                        "iconTintColor": "text-disabled-color"
+                                    }
+                                }
+                            }
+                        },
                         "size": {
                             "medium": {
                                 "paddingHorizontal": 5,
@@ -128,12 +334,12 @@
                     "mapping": {
                         "state": {
                             "selected": {
-                                "contentBorderColor": "color-success-500",
+                                "contentBorderColor": "color-primary-500",
                                 "contentTextColor": "text-primary-color",
                                 "contentBackgroundColor": "color-success-200"
                             },
                             "today": {
-                                "contentBorderColor": "color-success-500",
+                                "contentBorderColor": "color-primary-500",
                                 "contentBackgroundColor": "color-success-200",
                                 "contentTextColor": "text-primary-color"
                             },
@@ -142,7 +348,7 @@
                                 "contentTextColor": "color-secondary-500"
                             },
                             "today.range": {
-                                "contentBorderColor": "color-success-500",
+                                "contentBorderColor": "color-primary-500",
                                 "contentBackgroundColor": "color-success-200",
                                 "contentTextColor": "color-secondary-500"
                             }
