обновление расписания пол имени группы

--- a/custom-mapping.json
+++ b/custom-mapping.json
@@ -50,6 +50,10 @@
         "Card": {
             "appearances": {
                 "outline": {
+                    "mapping": {
+                        "bodyPaddingHorizontal": 0,
+                        "bodyPaddingVertical": 0
+                    },
                     "variantGroups": {
                         "status": {
                             "basic": {
