--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "axios": "^1.7.2",
     "expo": "^51.0.0",
     "expo-font": "~12.0.6",
+    "expo-linear-gradient": "^13.0.2",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
+    "moti": "^0.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
