--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@expo/metro-runtime": "~3.2.1",
     "@formkit/tempo": "^0.1.1",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/hooks": "^3.0.0",
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
     "axios": "^1.7.2",
