--- a/eas.json
+++ b/eas.json
@@ -5,7 +5,7 @@
                 "buildType": "apk"
             },
             "env": {
-                "EXPO_PUBLIC_API_URL": "http://95.54.199.81:8080"
+                "EXPO_PUBLIC_API_URL": "http://95.54.199.81:8080/"
             }
         },
         "preview2": {
