--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "expo-build-properties": "~0.12.3"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
