--- a/app.json
+++ b/app.json
@@ -16,6 +16,7 @@
             "supportsTablet": true
         },
         "android": {
+            "permissions": ["android.permission.WRITE_EXTERNAL_STORAGE"],
             "adaptiveIcon": {
                 "foregroundImage": "./assets/adaptive-icon.png",
                 "backgroundColor": "#ffffff"
