--- a/package.json
+++ b/package.json
@@ -1,47 +1,47 @@
 {
-    "name": "timetable",
-    "version": "1.0.0",
-    "main": "node_modules/expo/AppEntry.js",
-    "scripts": {
-        "start": "expo start",
-        "android": "expo start --android",
-        "ios": "expo start --ios",
-        "web": "expo start --web",
-        "apk": "eas build -p android --profile preview"
-    },
-    "dependencies": {
-        "@babel/runtime": "^7.24.7",
-        "@eva-design/eva": "^2.2.0",
-        "@expo/metro-runtime": "~3.2.1",
-        "@formkit/tempo": "^0.1.1",
-        "@react-native-async-storage/async-storage": "^1.23.1",
-        "@react-native-community/hooks": "^3.0.0",
-        "@ui-kitten/components": "^5.3.1",
-        "@ui-kitten/eva-icons": "^5.3.1",
-        "axios": "^1.7.2",
-        "expo": "^51.0.0",
-        "expo-build-properties": "~0.12.3",
-        "expo-file-system": "~17.0.1",
-        "expo-font": "~12.0.6",
-        "expo-linear-gradient": "^13.0.2",
-        "expo-sharing": "^12.0.1",
-        "expo-splash-screen": "~0.27.4",
-        "expo-status-bar": "~1.12.1",
-        "moti": "^0.29.0",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "react-native": "0.74.1",
-        "react-native-reanimated": "~3.10.1",
-        "react-native-svg": "15.2.0",
-        "react-native-web": "~0.19.10",
-        "xlsx": "https://cdn.sheetjs.com/xlsx-latest/xlsx-latest.tgz",
-        "xlsx-js-style": "^1.2.0",
-        "zustand": "^4.5.2"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.24.0",
-        "@types/react": "~18.2.79",
-        "typescript": "~5.3.3"
-    },
-    "private": true
+  "name": "timetable",
+  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "apk": "eas build -p android --profile preview"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.24.7",
+    "@eva-design/eva": "^2.2.0",
+    "@expo/metro-runtime": "~3.2.1",
+    "@formkit/tempo": "^0.1.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/hooks": "^3.0.0",
+    "@ui-kitten/components": "^5.3.1",
+    "@ui-kitten/eva-icons": "^5.3.1",
+    "axios": "^1.7.2",
+    "expo": "~51.0.17",
+    "expo-build-properties": "~0.12.3",
+    "expo-file-system": "~17.0.1",
+    "expo-font": "~12.0.6",
+    "expo-linear-gradient": "^13.0.2",
+    "expo-sharing": "^12.0.1",
+    "expo-splash-screen": "~0.27.5",
+    "expo-status-bar": "~1.12.1",
+    "moti": "^0.29.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.2",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-svg": "15.2.0",
+    "react-native-web": "~0.19.10",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-latest/xlsx-latest.tgz",
+    "xlsx-js-style": "^1.2.0",
+    "zustand": "^4.5.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.24.0",
+    "@types/react": "~18.2.79",
+    "typescript": "~5.3.3"
+  },
+  "private": true
 }
