закрытие календаря если ошибка при выборе группы

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-EXPO_PUBLIC_API_URL=http://95.54.199.81:8080
+# EXPO_PUBLIC_API_URL=http://95.54.199.81:8080
+EXPO_PUBLIC_API_URL=http://localhost:8080
