--- a/app.json
+++ b/app.json
@@ -33,8 +33,8 @@
         },
         "extra": {
             "eas": {
-                "owner": "fdrvch",
-                "projectId": "353e059b-7891-4ef0-a004-083b65a1bb6e"
+                "owner": "${process.env.PROJECT_OWNER}",
+                "projectId": "${process.env.PROJECT_ID}"
             }
         },
         "plugins": [
